[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Modak-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/images/mainmenu/start.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 3
outline_color = Color( 0.133333, 0.133333, 0.133333, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 636.888, 360.812 )
texture = ExtResource( 3 )

[node name="Title" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -48.5
margin_right = 151.5
margin_bottom = 48.5
custom_fonts/font = SubResource( 1 )
text = "DREAMING"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.6671
margin_top = 199.382
margin_right = 49.3329
margin_bottom = 289.382
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_right = 126.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 47.0
margin_right = 126.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 94.0
margin_right = 126.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
